kubernetes/test/app-test-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          imagePullPolicy: Always
          image: hieucannguyen/bike_share_web_app:1.0
          ports:
          - name: http
            containerPort: 5000
          env:
          - name: REDIS_HOST
            value: "redis-db"
          - name: LOG_LEVEL
            value: DEBUG
