kubernetes/test/app-test-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
  labels:
    app: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: "/data"
    volumes:
    - name: redis-data
      persistentVolumeClaim:
          claimName: redis-data
