kubernetes/test/app-test-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: hieucannguyen/bike_share_web_app:1.0
        command: ["python3", "-u", "worker.py"]
        env:
        - name: REDIS_HOST
          value: "redis-db"
        - name: LOG_LEVEL
          value: DEBUG
