kubernetes/test/app-test-service-redis.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: redos-db-service
spec:
  type: ClusterIP
  selector:
    app: redis-db
  ports:
  - name: redis-db
    port: 6379
    targetPort: 6379
